# KernelBasedLagrangianFluidSim

./: Cargo.toml  README.md
src/: lib.rs  main.rs  render.wgsl  shaders.wgsl  sim.rs  sim_cpu.rs  sim_old.rs
