[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
nalgebra = { version = "0.32.3", features = ["bytemuck"] }
piston_window = "0.131.0"
wgpu = "0.19.1"
