[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["bytemuck"] }
#piston_window = "0.131.0"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
